# automated-valuation-model-aws-mlops

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
models/: xgb_model.pkl
notebooks/: 00_data_split.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFLow.ipynb  07_S3_push_datasets_AWS.ipynb
src/api/: main.py
src/training_pipeline/: tune.py
tests/: smoke_test_.ipynb  test_training.py
